2009-04-14
Worked on default template
Worked on reports

2009-04-10
Plugins not include pages that contain template information if the extension of the template is a .php
Smarty system is now a GLOBAL that is setup in common
Added some comments in the code

2009-04-09
Worked on encoding presets in the encode.php plugin
Added constants for disabling modules

2009-04-08
Fixed a bad error with db_archive and db_diskimage module, the Filepath was being passed to the db_ids modules with the addslashes before, so slashes were added twice
Fixed an error with db_ids module, if an ID wasn't in the array it overwrote the entire id array so it then rechecked every id
	Doesn't check for IDs in watch, watch_list, alias, and itself now
Worked on speed issues for cron.php script
Limit all select calls that include Filepath = "" by 1 because filepaths are unique

2009-04-07
Added the db_ids results to the file requests in plugins, this is so modules can try to be more efficient then just looking up filepaths
	Changed modules to use int ids, bigint is unnessicary and cost twice as much time, it is unlikely that anyone will load more then 2 billion files into the database
Changed db_ids to look up all the ids at once, it now accepts a $files parameter and appends all the needed id information
Fixed some problems with db_file module and the handle() functions

2009-04-05
Changed db_files search feature to put the directory matching first to narrow down results better
Worked on search page for live template

2009-04-04
Using the general search no longer affects other columns specified in the query
Worked on Live template, search page now looks nice

2009-04-03
Worked on live template, added information box, and Advanced Search button

2009-04-02
Created a LOCAL_BASE variable that is the base template for holding shared pages for other templates to use
Changed LOCAL_DEFAULT to the default template that loads when one is not selected